--- a/content/posts/1752380301-比特幣創新高，散戶熱度卻未見回溫.md
+++ b/content/posts/1752380301-比特幣創新高，散戶熱度卻未見回溫.md
@@ -1,5 +1,5 @@
 ---
-title: "比特幣創新高，散戶熱度卻未見回溫"
+title: "### 比特幣創新高，散戶熱度卻未見回溫"
 date: 2025-07-13T04:18:21+08:00
 draft: false
 image: "/images/1752380300.png"
